# workers

./: .gitignore  :  :w  README.md  docker-compose.yml  package.json
letsencrypt/: acme.json
server/: Cargo.toml  diesel.toml  server.db
server/migrations/2025-05-01-130924_init/: up.sql
server/src/: actions.rs  container_spec.json  main.old.rs  main.old_2.rs  main.rs  models.rs  runner.rs  schema.rs
workers/test_worker/: Dockerfile  index.ts  package.json
