[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
bollard = "*"
containerd-client = "0.8.0"
cuid = "1.3.3"
diesel = { version = "2.2.10", features = ["sqlite"] }
futures-util = "0.3.31"
log = "0.4.27"
oci-spec = "0.8.1"
prost-types = "0.13.5"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
